infrastructure/monitoring/config/httproute-tunnel.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-tunnel
  namespace: monitoring
spec:
  parentRefs:
    - name: yh-cluster
      namespace: cloudflare-gateway
  hostnames:
    - grafana-yh-k8s.tsuru.run
  rules:
    - backendRefs:
        - name: monitoring-grafana
          port: 80
