infrastructure/monitoring/config/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http
  namespace: monitoring
spec:
  parentRefs:
    - name: grafana-gateway
  hostnames:
    - grafana.yh.k8s.tsuru.run
  rules:
    - backendRefs:
        - name: monitoring-grafana
          port: 80
